Some small corrections
Signed-off-by: clinique <gael@lhopital.org>